# playground

agda/: HoleFilling.agda  IPL.agda  LearnYouAn.agda
agda/Theorem2-22/: aaa.agda
c/: http-server.c  point.c  temp.c  zipmax.c
c/kuru-c/: flake.nix
c/kuru-c/chapter-11-3/: main.c
c/kuru-c/chapter-15-5/: main.c
c/kuru-c/chapter-16-1/: main.c
c/kuru-c/chapter-17-1/: main.c
c/kuru-c/chapter-3-1/: main.c
c/kuru-c/chapter-3-2/: main.c
c/kuru-c/chapter-5-1/: main.c
c/kuru-c/chapter-6-1/: main.c
c/kuru-c/chapter-7-1/: main.c
c/kuru-c/chapter-9-1/: main.c
coq/: group.v  temp.v
egison/: contest.egi
elm/: Dockerfile  RandomGif.elm  elm.json  package.json
elm/RandomGif/: Dockerfile  Main.elm  elm.json
elm/kodokutter/: .gitignore  Dockerfile  README.md  package.json
elm/kodokutter/src/: Main.elm
elm/qcd/: Dockerfile  Main.elm  docker-compose.yml  elm.json  package.json
erlang/: basic.erl  matching_gunction.erl  temp.erl  translate.erl  yet_again.erl
grass/: temp.gr
haskell/: .gitignore  README.md  Setup.hs  cabal.project  cabal.project.freeze  fourmolu.yaml  package.yaml  playground.cabal  stack.yaml
haskell/CC-delcont-0.2.1.0/Control/Monad/CC/: Prompt.hs
haskell/CC-delcont-0.2.1.1/: CC-delcont.cabal
haskell/CC-delcont-0.2.1.1/Control/Monad/: CC.hs
haskell/IOSpec-0.3/: IOSpec.cabal
haskell/IOSpec-0.3.1.2/: IOSpec.cabal
haskell/IOSpec-0.3.1.2/src/Test/IOSpec/: VirtualMachine.hs
haskell/IOSpec-0.3/src/Test/: IOSpec.hs
haskell/IOSpec-0.3/src/Test/IOSpec/: Fork.hs  IORef.hs  MVar.hs  STM.hs  Teletype.hs  Types.hs  VirtualMachine.hs
haskell/app/flattenDirectory/: Main.hs
haskell/app/helloWorldThread/: Main.hs
haskell/app/janken/: Main.hs
haskell/app/karaage/: Main.hs
haskell/app/readert-pattern-is-just-extensible-effects/: Step0.hs  Step1.hs  Step2.hs  Step3.hs  Step4.hs
haskell/app/zundoko/: Main.hs
haskell/benchmark/lazy-pattern/: Main.hs
haskell/holdem-winrate/: LICENSE  Main.hs  README.md  holdem-winrate.cabal
haskell/src/: ATaleOfTwoBrackets1.hs  ATaleOfTwoBrackets2.hs  AccumulatorGenerator.hs  Antifibonacci.hs  Applicative2.hs  Approximation.hs  AssociatedType.hs  AstGadt.hs  AutomatonCategory.hs  Bifold.hs  Categories.hs  CircularProgramming.hs  Corecursion.hs  Coroutine.hs  DataAsFunction.hs  DataTypesALaCarte.hs  DayConvolution.hs  DeleteMin.hs  DelimitedContinuation.hs  DependencyInjection.hs  DesignForTestability.hs  DistanceFetcher.hs  DurationFetcher.hs  Failable.hs  FoldToTree.hs  Free.hs  HexagonalArchitecture.hs  HontohaSugoiNewtype.hs  InitialTerminalObject.hs  IsItWrongToWantScalaToHaveExistentialOperators.hs  LaxMonoidalFunctor.hs  LensesEmbodyProductsPrismsEmbodySums.hs  LevityPolymorphism.hs  MapAccumRPascal.hs  MapAccumWithState.hs  MonadWithDefault.hs  MonoidAsASingleObjectCategory.hs  MutableStateInHaskell.hs  NBonacci.hs  NumberPlate.hs  (+14 more)
haskell/src/FizzBuzz/: FizzBuzz.hs  Nabeatsu.hs  Rule.hs
haskell/src/MonadComposition/: Distributive.hs  Traversable.hs
haskell/src/StratifiedDesign/: Domain.hs  Main.hs
haskell/src/StratifiedDesign/Adaptor/: Data.hs  Presentation.hs
haskell/src/WIP/: SevenQueens.hs
haskell/src/Wa/: Monoid.hs  README.md  Reader.hs
haskell/test/: IOSpec.hs  LevityPolymorphismSpec.hs  MapAccumWithStateSpec.hs  Spec.hs
haskell/test/doctest/: Main.hs
haskell/test/spec/: ApproximationSpec.hs  DeleteMinSpec.hs  FizzBuzzSpec.hs  FoldToTreeSpec.hs  IOSpec.hs  IsItWrongToWantScalaToHaveExistentialOperatorsSpec.hs  LevityPolymorphismSpec.hs  Main.hs  MapAccumWithStateSpec.hs  MutableStateInHaskellSpec.hs  SizeSpec.hs
haskell/test/spec/Wa/: MonoidSpec.hs  ReaderSpec.hs
idris/: append.idr
nix/: autotools.nix  builder.sh  graphviz.nix  hello.nix  hello2.nix  hello3.nix  hello_builder.sh  simple.nix
nix/projects/: README.md
nix/projects/finch/: default.nix
nix/projects/glove/: default.nix
nix/simple/: builder.sh  default.nix  simple.c
prolog/: eight_queen.pl  family.pl  list_math.pl  sudoku4.pl  temp.pl
purescript/halogen-guide/: .gitignore  index.html  shell.nix  spago.dhall
purescript/halogen-guide/src/: Main.purs
python/: temp.py  wgetgz.py
ruby/: 99.rb  brainfuck.rb  counter.rb  hello.bf  hq9plus.rb  scheme.rb  starry.rb  words.rb
ruby/depot/app/models/: product.rb
ruby/depot/app/views/layouts/: application.html.erb
ruby/depot/app/views/products/: index.html.erb
ruby/depot/config/initializers/: secret_token.rb
ruby/depot/db/: schema.rb
ruby/depot/test/fixtures/: products.yml
ruby/depot/test/functional/: products_controller_test.rb
ruby/depot/test/unit/: product_test.rb
ruby/refactoring/: video.rb
ruby/whitespace/lib/whitespace/: compiler.rb  vm.rb
rust/dining_philosophers/: Cargo.toml
rust/dining_philosophers/src/: main.rs
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello_world/: Cargo.toml
rust/hello_world/src/: main.rs
rust/hello_world/src/english/: mod.rs
rust/hello_world/src/japanese/: farewells.rs  greetings.rs
scala/: ErrorHandling.scala  OpenRecursion.scala  build.sbt
scheme/: 4304.scm  L99.scm  Y.scm  binary_search_tree.scm  coroutine.scm  cows-and-bulls.scm  delegatemap.scm  double-ended-queue.scm  environment.scm  fringe.scm  interpreter.scm  iota.scm  lambda.scm  list-of.scm  memoize.scm  monad.scm  pascal.scm  pi-stream.scm  queue.scm  quine.scm  simple-interpreter.scm  temp.scm  tree-generator.scm  y-combinator.scm
smalltalk/: test.st
