cabal-version:       2.4

name:                holdem-winrate
version:             0.1.0.0
synopsis:            Calculate winrates for Texas Hold'em.
-- description:
homepage:            https://github.com/cohei/playground/tree/master/haskell
license:             MIT
license-file:        LICENSE
author:              TANIGUCHI Kohei
maintainer:          a.d.xvii.kal.mai@gmail.com
-- copyright:
category:            Game
extra-source-files:  README.md

executable holdem-winrate
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
                     , containers
                     , hspec
  -- hs-source-dirs:
  default-language:    Haskell2010
